# python_tutrials

./: README.md
jinja/sample_project/: pyproject.toml
jinja/sample_project/sample_project/: sample_hello.py
jinja_tutrials/: README.md
jinja_tutrials/sample_project/output/: sample_hello_export.py.md
jinja_tutrials/sample_project/sample_project/: sample_hello_export.py
jinja_tutrials/sample_project/templates/: hello_user.txt.j2
pip/: README.md
poetry/: README.md
poetry_tutrials/: README.md
poetry_tutrials/sample_project/sample_project/: hello.py
pyenv/: README.md
rye/: README.md
sample/: README.md
sample/misc/windows/myenv/: pyvenv.cfg
sample/poetry_tutrials/sample_project/: pyproject.toml
sample/pyenv-poetry/Linux/shell_scripts/: create_pyenv.sh  install_pyenv.sh
sample/windows/: create_environment.bat
utils/notebook/: dict_utils.ipynb
uv/: README.md
virtual_environments_tutrilas/misc/windows/: create_environment.bat
virtual_environments_tutrilas/pyenv-poetry/Linux/: README.md
virtual_environments_tutrilas/windows/: create_environment.bat
