[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["Hiroki <danjo.work@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_project"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
